// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UI Component Snapshots > renders AppShell with navigation 1`] = `
<div>
  <div
    class="min-h-screen bg-slate-950 text-slate-100"
  >
    <a
      class="sr-only focus:not-sr-only focus:fixed focus:left-4 focus:top-4 focus:rounded-xl focus:bg-slate-900 focus:px-3 focus:py-2 focus:text-slate-100"
      download=""
      href="#main"
    >
      Skip to content
    </a>
    <header
      class="sticky top-0 z-40 border-b border-slate-800 bg-slate-950/80 backdrop-blur"
    >
      <div
        class="mx-auto flex h-14 max-w-6xl items-center justify-between px-4"
      >
        <button
          class="inline-flex items-center gap-2 text-sm font-semibold tracking-[0.18em] uppercase text-violet-200"
          type="button"
        >
          Value Venture Lab
        </button>
        <nav
          class="flex items-center gap-1"
        >
          <a
            download=""
            href="/home"
          >
            <a
              class="inline-flex items-center gap-2 rounded-xl border px-3 py-2 text-xs font-medium transition border-transparent text-slate-300 hover:bg-slate-900/70"
              download=""
              href=""
            >
              <svg
                class="lucide lucide-sparkles h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"
                />
                <path
                  d="M20 3v4"
                />
                <path
                  d="M22 5h-4"
                />
                <path
                  d="M4 17v2"
                />
                <path
                  d="M5 18H3"
                />
              </svg>
              Home
            </a>
          </a>
          <a
            download=""
            href="/workbench/home"
          >
            <a
              class="inline-flex items-center gap-2 rounded-xl border px-3 py-2 text-xs font-medium transition border-transparent text-slate-300 hover:bg-slate-900/70"
              download=""
              href=""
            >
              <svg
                class="lucide lucide-panels-top-left h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="18"
                  rx="2"
                  width="18"
                  x="3"
                  y="3"
                />
                <path
                  d="M3 9h18"
                />
                <path
                  d="M9 21V9"
                />
              </svg>
              Workbench
            </a>
          </a>
          <a
            download=""
            href="/analytics"
          >
            <a
              class="inline-flex items-center gap-2 rounded-xl border px-3 py-2 text-xs font-medium transition border-transparent text-slate-300 hover:bg-slate-900/70"
              download=""
              href=""
            >
              <svg
                class="lucide lucide-chart-bar h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 3v16a2 2 0 0 0 2 2h16"
                />
                <path
                  d="M7 16h8"
                />
                <path
                  d="M7 11h12"
                />
                <path
                  d="M7 6h3"
                />
              </svg>
              Analytics
            </a>
          </a>
          <a
            download=""
            href="/inventory"
          >
            <a
              class="inline-flex items-center gap-2 rounded-xl border px-3 py-2 text-xs font-medium transition border-transparent text-slate-300 hover:bg-slate-900/70"
              download=""
              href=""
            >
              <svg
                class="lucide lucide-briefcase h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16 20V4a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"
                />
                <rect
                  height="14"
                  rx="2"
                  width="20"
                  x="2"
                  y="6"
                />
              </svg>
              Operations
            </a>
          </a>
        </nav>
      </div>
    </header>
    <main
      aria-live="polite"
      class="flex-1"
      id="main"
      role="main"
    />
  </div>
</div>
`;

exports[`UI Component Snapshots > renders Explorer component with stages 1`] = `
<div>
  <aside
    aria-label="Explorer navigation"
    class="hidden w-64 shrink-0 border-r border-slate-900 bg-slate-950/70 lg:flex"
  >
    <div
      class="relative overflow-hidden h-full w-full"
      dir="ltr"
      style="position: relative; --radix-scroll-area-corner-width: 0px; --radix-scroll-area-corner-height: 0px;"
      tabindex="-1"
    >
      <style>
        [data-radix-scroll-area-viewport]{scrollbar-width:none;-ms-overflow-style:none;-webkit-overflow-scrolling:touch;}[data-radix-scroll-area-viewport]::-webkit-scrollbar{display:none}
      </style>
      <div
        class="h-full w-full rounded-[inherit]"
        data-radix-scroll-area-viewport=""
        style="overflow-x: hidden; overflow-y: scroll;"
      >
        <div
          style="min-width: 100%; display: table;"
        >
          <div
            class="space-y-6 p-4"
          >
            <section>
              <div
                class="text-[11px] uppercase tracking-[0.14em] text-slate-500"
              >
                Pipeline
              </div>
              <div
                class="mt-3 space-y-1.5"
              >
                <button
                  aria-current="page"
                  class="flex w-full items-center gap-3 rounded-xl px-3 py-2 text-left text-sm transition-all duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-violet-500 focus:ring-offset-2 focus:ring-offset-slate-950 bg-slate-900/80 text-slate-50 shadow-[0_0_18px_rgba(99,102,241,0.35)]"
                  type="button"
                >
                  <span
                    class="mt-0.5 h-2 w-2 rounded-full bg-violet-400"
                  />
                  <div
                    class="flex flex-1 flex-col"
                  >
                    <span
                      class="font-medium leading-tight text-slate-100"
                    >
                      Home
                    </span>
                    <span
                      class="text-xs text-slate-500"
                    >
                      Overview stage
                    </span>
                  </div>
                </button>
                <button
                  class="flex w-full items-center gap-3 rounded-xl px-3 py-2 text-left text-sm transition-all duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-violet-500 focus:ring-offset-2 focus:ring-offset-slate-950 cursor-not-allowed text-slate-600"
                  disabled=""
                  type="button"
                >
                  <span
                    class="mt-0.5 h-2 w-2 rounded-full bg-slate-600"
                  />
                  <div
                    class="flex flex-1 flex-col"
                  >
                    <span
                      class="font-medium leading-tight text-slate-100"
                    >
                      Intake
                    </span>
                    <span
                      class="text-xs text-slate-500"
                    >
                      Data intake
                    </span>
                  </div>
                  <svg
                    class="lucide lucide-lock h-4 w-4 text-slate-600"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      height="11"
                      rx="2"
                      ry="2"
                      width="18"
                      x="3"
                      y="11"
                    />
                    <path
                      d="M7 11V7a5 5 0 0 1 10 0v4"
                    />
                  </svg>
                </button>
              </div>
            </section>
          </div>
        </div>
      </div>
    </div>
  </aside>
</div>
`;

exports[`UI Component Snapshots > renders GlassCard component 1`] = `
<div>
  <div
    class="rounded-2xl border border-slate-800 bg-slate-900/60 shadow-[0_0_24px_rgba(15,23,42,0.45)]"
  >
    <div>
      Card content
    </div>
  </div>
</div>
`;

exports[`UI Component Snapshots > renders Inspector component with checklist 1`] = `
<div>
  <aside
    aria-label="Inspector sidebar"
    class="hidden w-80 shrink-0 border-l border-slate-900 bg-slate-950/70 lg:flex"
  >
    <div
      aria-label="Inspector"
      class="relative overflow-hidden h-full w-full"
      dir="ltr"
      style="position: relative; --radix-scroll-area-corner-width: 0px; --radix-scroll-area-corner-height: 0px;"
    >
      <style>
        [data-radix-scroll-area-viewport]{scrollbar-width:none;-ms-overflow-style:none;-webkit-overflow-scrolling:touch;}[data-radix-scroll-area-viewport]::-webkit-scrollbar{display:none}
      </style>
      <div
        class="h-full w-full rounded-[inherit]"
        data-radix-scroll-area-viewport=""
        style="overflow-x: hidden; overflow-y: scroll;"
      >
        <div
          style="min-width: 100%; display: table;"
        >
          <div
            class="space-y-6 p-4"
          >
            <section
              class="space-y-3"
            >
              <div
                class="text-[11px] uppercase tracking-[0.14em] text-slate-500"
              >
                Stage Overview
              </div>
              <div
                class="rounded-2xl border border-slate-800 bg-slate-900/70 p-4 shadow-[0_0_20px_rgba(15,23,42,0.45)] space-y-3"
              >
                <div
                  class="flex items-center justify-between"
                >
                  <div>
                    <div
                      class="text-sm font-semibold text-slate-100"
                    >
                      In Progress
                    </div>
                    <div
                      class="text-xs text-slate-400"
                    >
                      Solo analyst
                    </div>
                  </div>
                  <span
                    class="rounded-full px-2.5 py-1 text-[11px] font-medium uppercase tracking-wide bg-violet-700/30 text-violet-200 ring-1 ring-violet-600/50 shadow-[0_0_12px_rgba(99,102,241,0.35)]"
                  >
                    In Progress
                  </span>
                </div>
                <div
                  class="space-y-2"
                >
                  <div
                    class="text-xs text-slate-400"
                  >
                    AI Modes Enabled
                  </div>
                  <div
                    class="flex flex-wrap gap-2"
                  >
                    <span
                      class="rounded-full px-2.5 py-1 text-[11px] font-medium uppercase tracking-wide bg-slate-800/60 text-slate-200 ring-1 ring-slate-700/70 shadow-[0_0_12px_rgba(15,23,42,0.35)]"
                    >
                      AI Pair Analyst
                    </span>
                  </div>
                </div>
              </div>
            </section>
            <section
              class="space-y-3"
            >
              <div
                class="text-[11px] uppercase tracking-[0.14em] text-slate-500"
              >
                AI Pair Analyst
              </div>
              <div
                class="rounded-2xl border border-slate-800 bg-slate-900/70 p-4 shadow-[0_0_20px_rgba(15,23,42,0.45)] space-y-3"
              >
                <div
                  class="text-xs text-slate-400"
                >
                  Last prompt
                </div>
                <div
                  class="min-h-[48px] rounded-xl bg-slate-950/60 px-3 py-2 text-sm text-slate-200"
                >
                  No prompt submitted yet.
                </div>
                <div
                  class="flex items-center gap-2"
                >
                  <button
                    class="rounded-lg border border-slate-800 px-2 py-1 text-[11px] text-slate-300 hover:bg-slate-900"
                    type="button"
                  >
                    Copy last prompt
                  </button>
                </div>
                <div
                  class="text-xs text-slate-400"
                >
                  Suggested quick actions
                </div>
                <div
                  class="grid gap-2 text-sm text-slate-200"
                >
                  <button
                    class="w-full rounded-xl border border-violet-500/30 bg-violet-600/10 px-3 py-2 text-left text-xs transition hover:bg-violet-600/20"
                    type="button"
                  >
                    Summarize the latest filing with citations.
                  </button>
                  <button
                    class="w-full rounded-xl border border-violet-500/30 bg-violet-600/10 px-3 py-2 text-left text-xs transition hover:bg-violet-600/20"
                    type="button"
                  >
                    Highlight three contrarian risks vs. consensus.
                  </button>
                  <button
                    class="w-full rounded-xl border border-violet-500/30 bg-violet-600/10 px-3 py-2 text-left text-xs transition hover:bg-violet-600/20"
                    type="button"
                  >
                    Regenerate memo outline with valuation hooks.
                  </button>
                </div>
              </div>
            </section>
            <section
              class="space-y-3"
            >
              <div
                class="text-[11px] uppercase tracking-[0.14em] text-slate-500"
              >
                Gating Checklist
              </div>
              <div
                class="rounded-2xl border border-slate-800 bg-slate-900/70 p-4 shadow-[0_0_20px_rgba(15,23,42,0.45)] space-y-3 text-sm text-slate-200"
              >
                <div
                  class="rounded-xl border border-dashed border-slate-700/80 px-3 py-4 text-xs text-slate-500"
                >
                  No gating checklist for this stage.
                </div>
              </div>
            </section>
            <section
              class="space-y-3"
            >
              <div
                class="text-[11px] uppercase tracking-[0.14em] text-slate-500"
              >
                Activity Log
              </div>
              <div
                class="rounded-2xl border border-slate-800 bg-slate-900/70 p-4 shadow-[0_0_20px_rgba(15,23,42,0.45)] space-y-2 text-sm text-slate-200"
              >
                <div
                  class="rounded-xl border border-dashed border-slate-700/80 px-3 py-4 text-xs text-slate-500"
                >
                  Interaction log for this stage will appear here.
                </div>
              </div>
            </section>
          </div>
        </div>
      </div>
    </div>
  </aside>
</div>
`;

exports[`UI Component Snapshots > renders PageContainer with header 1`] = `
<div>
  <div
    class="mx-auto flex max-w-6xl flex-col gap-8 px-6 py-10"
  >
    <header
      class="flex flex-wrap items-center justify-between gap-4"
    >
      <div
        class="space-y-2"
      >
        <h1
          class="text-3xl font-semibold text-slate-50"
        >
          Test Page
        </h1>
        <p
          class="max-w-2xl text-sm text-slate-400"
        >
          Test subtitle
        </p>
      </div>
      <div
        class="flex flex-wrap gap-2"
      >
        <button>
          Action
        </button>
      </div>
    </header>
    <div>
      Page content
    </div>
  </div>
</div>
`;

exports[`UI Component Snapshots > renders Workbench component with tabs 1`] = `
<div>
  <section
    aria-label="Workbench content"
    class="flex min-h-0 flex-1 flex-col bg-slate-950/50"
    tabindex="-1"
  >
    <header
      class="flex h-16 items-center justify-between border-b border-slate-800 px-4"
    >
      <div
        class="leading-tight"
      >
        <div
          class="text-[11px] uppercase tracking-[0.14em] text-slate-500"
        >
          Workbench
        </div>
        <div
          class="text-sm font-semibold text-slate-100"
        >
          Test Stage
        </div>
        <div
          class="text-xs text-slate-500"
        >
          Test goal
        </div>
      </div>
    </header>
    <div
      aria-label="Workbench tabs"
      class="flex h-11 items-center gap-1 overflow-x-auto border-b border-slate-800 px-3 text-sm"
      role="tablist"
    >
      <button
        aria-controls="tabpanel-overview"
        aria-selected="true"
        class="rounded-t-lg px-3 py-1.5 shadow-[inset_0_-1px_0_rgba(148,163,184,0.12)] transition-all duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-violet-500 focus:ring-offset-2 focus:ring-offset-slate-950 bg-slate-900/80 text-slate-100"
        role="tab"
        tabindex="0"
        type="button"
      >
        Overview
      </button>
      <button
        aria-controls="tabpanel-details"
        aria-selected="false"
        class="rounded-t-lg px-3 py-1.5 shadow-[inset_0_-1px_0_rgba(148,163,184,0.12)] transition-all duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-violet-500 focus:ring-offset-2 focus:ring-offset-slate-950 text-slate-400 hover:bg-slate-900/60 hover:text-slate-200"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Details
      </button>
    </div>
    <div
      class="flex-1 overflow-hidden"
    >
      <div
        class="relative overflow-hidden h-full"
        dir="ltr"
        style="position: relative; --radix-scroll-area-corner-width: 0px; --radix-scroll-area-corner-height: 0px;"
      >
        <style>
          [data-radix-scroll-area-viewport]{scrollbar-width:none;-ms-overflow-style:none;-webkit-overflow-scrolling:touch;}[data-radix-scroll-area-viewport]::-webkit-scrollbar{display:none}
        </style>
        <div
          class="h-full w-full rounded-[inherit]"
          data-radix-scroll-area-viewport=""
          style="overflow-x: hidden; overflow-y: scroll;"
        >
          <div
            style="min-width: 100%; display: table;"
          >
            <div
              aria-labelledby="tab-overview"
              class="space-y-6 bg-slate-950/40 p-6 text-sm text-slate-100 transition-all duration-200 ease-in-out"
              id="tabpanel-overview"
              role="tabpanel"
            >
              <div>
                Overview content
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`UI Component Snapshots > renders different GlassCard variants 1`] = `
<div>
  <div>
    <div
      class="rounded-2xl border border-slate-800 bg-slate-900/60 shadow-[0_0_24px_rgba(15,23,42,0.45)]"
    >
      <div>
        Slate card
      </div>
    </div>
    <div
      class="rounded-2xl border border-slate-800 bg-slate-900/60 shadow-[0_0_24px_rgba(15,23,42,0.45)]"
    >
      <div>
        Violet card
      </div>
    </div>
    <div
      class="rounded-2xl border border-slate-800 bg-slate-900/60 shadow-[0_0_24px_rgba(15,23,42,0.45)]"
    >
      <div>
        Emerald card
      </div>
    </div>
    <div
      class="rounded-2xl border border-slate-800 bg-slate-900/60 shadow-[0_0_24px_rgba(15,23,42,0.45)]"
    >
      <div>
        Amber card
      </div>
    </div>
  </div>
</div>
`;
